# acap-datasci-env

./: .dockerignore  .gitignore  README.md  flake.nix  prefect.yaml  pyproject.toml
docker-compose/: docker-compose.yaml
docker-compose/git/: Dockerfile
docker-compose/marimo/: Dockerfile  pyproject.toml  requirements.txt  requirements.txt.prefect
docker-compose/mlflow/: Dockerfile  requirements.txt
docker-compose/postgres/: init-dbs.sql
docker-compose/prefect/server/: Dockerfile
docker-compose/prefect/worker/: Dockerfile  requirements.txt
experiments/: example.py
scripts/: prepare_iris_csv.py
